src/ui/snapshots/rust_hf_downloader__ui__render__snapshot_tests__snapshot_auth_error_popup_no_token.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"               ┌Authentication Required─────────────────────────────────────────────┐               "
"               │ This model requires authentication to download.                    │               "
"               │                                                                    │               "
"               │ Steps to access this model:                                        │               "
"               │                                                                    │               "
"               │ 1. Visit: https://huggingface.co/meta-llama/Llama-3.1-8B           │               "
"               │                                                                    │               "
"               │ 2. Sign the model usage agreement/waiver                           │               "
"               │                                                                    │               "
"               │ 3. Create a HuggingFace token at:                                  │               "
"               │    https://huggingface.co/settings/tokens                          │               "
"               │                                                                    │               "
"               │ 4. Press 'o' and add token in Options                              │               "
"               │                                                                    │               "
"               │ Press ESC or Enter to dismiss                                      │               "
"               │                                                                    │               "
"               └────────────────────────────────────────────────────────────────────┘               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
