src/ui/snapshots/rust_hf_downloader__ui__render__snapshot_tests__snapshot_auth_error_popup_with_token.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"               ┌Authentication Required─────────────────────────────────────────────┐               "
"               │ This model requires authentication to download.                    │               "
"               │                                                                    │               "
"               │ Steps to access this model:                                        │               "
"               │                                                                    │               "
"               │ 1. Visit: https://huggingface.co/meta-llama/Llama-3.1-8B           │               "
"               │                                                                    │               "
"               │ 2. Sign the model usage agreement/waiver                           │               "
"               │                                                                    │               "
"               │ 3. Ensure your token has access to this model                      │               "
"               │                                                                    │               "
"               │                                                                    │               "
"               └────────────────────────────────────────────────────────────────────┘               "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
