src/ui/snapshots/rust_hf_downloader__ui__render__snapshot_tests__snapshot_download_progress_with_chunks.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"                                                ┌Downloading (2 queued) 3GB remaining, ~1 minute───┐"
"                                                │█████████████████50% - 85.50 MB/s                 │"
"                                                └──────────────────────────────────────────────────┘"
"                                                ┌Active Chunks─────────────────────────────────────┐"
"                                                │#1 [========================      ]  30.00 MB/s   │"
"                                                │#2 [============                  ]  25.50 MB/s   │"
"                                                └──────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
