src/ui/snapshots/rust_hf_downloader__ui__render__snapshot_tests__snapshot_filter_toolbar_downloads_focused.snap
---
source: src/ui/render.rs
assertion_line: 2779
expression: terminal.backend()
---
"┌Filters  [Click to cycle | 1-4: Presets | r: Reset | Ctrl+S: Save]────────────────────────────────┐"
"│Sort: Downloads ▼  |  Min Downloads: 10.0K  |  Min Likes: 100  |  [Popular]                v2.11.0│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
