src/ui/snapshots/rust_hf_downloader__ui__render__snapshot_tests__snapshot_render_ui_empty_state.snap
---
source: src/ui/render.rs
assertion_line: 2472
expression: terminal.backend()
---
"┌Filters  [Click to cycle | 1-4: Presets | r: Reset | Ctrl+S: Save]────────────────────────────────┐"
"│Sort: Downloads ▼  |  Min Downloads: 0  |  Min Likes: 0  |  [No Filters]                   v2.11.0│"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Results [Enter a search query]────────────────────────────────────────────────────────────────────┐"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
"┌Quantization Types [Select a model to view]─────┐┌Files [Select a quantization type]──────────────┐"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
"┌Status────────────────────────────────────────────────────────────────────────────────────────────┐"
"│Press / to search                                                                                 │"
"│                                                                                                  │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
