src/ui/snapshots/rust_hf_downloader__ui__render__snapshot_tests__snapshot_verification_progress_bar.snap
---
source: src/ui/render.rs
expression: terminal.backend()
---
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                ┌Verifying (2 queued)──────────────────────────────┐"
"                                                │┌Llama-3.1-8B-Q4_K_M.gguf────────────────────────┐│"
"                                                ││█████████████50% 0.04 GB/s ETA 12s              ││"
"                                                │└────────────────────────────────────────────────┘│"
"                                                │                                                  │"
"                                                └──────────────────────────────────────────────────┘"
